test/tests/stages/16_characters_and_strings/valid/chars/chained_casts.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: ui
        CSingleInit: 
          CConstant: 
            CConstUInt: 
              TUInt: 4294967200
            None: 
          None: 
        UInt: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: ui
                    None: 
                  CCast: 
                    CCast: 
                      CVar: 
                        TIdentifier: ui
                        None: 
                      UChar: 
                      None: 
                    UInt: 
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: ui
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 160
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: i
                  CSingleInit: 
                    CCast: 
                      CCast: 
                        CVar: 
                          TIdentifier: ui
                          None: 
                        SChar: 
                        None: 
                      Int: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 96
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
