test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_for_multidim_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: arr
        CSingleInit: 
          CString: 
            CStringLiteral: 
              List[5]: 
                TChar: 104
                TChar: 101
                TChar: 108
                TChar: 108
                TChar: 111
            None: 
          None: 
        Array: 
          TLong: 3
          Array: 
            TLong: 3
            Char: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CSubscript: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
